--- a/dev/css_dev/layout/_container.scss
+++ b/dev/css_dev/layout/_container.scss
@@ -35,6 +35,7 @@
 .page_host{
   .layout_banner_wrap{
     background: url(../../assets/images/contents/host_banner.png) no-repeat center;
+    background-size: cover;
   }
 }
 
@@ -42,14 +43,12 @@
 .page_padcast{
   .layout_banner_wrap{
     background: url(../../assets/images/contents/podcast_banner_2.png) no-repeat center;
+    background-size: cover;
   }
 }
 
 /* page_blog */
 .page_blog{
-  .top_img_wrap{
-    order: 2;
-  }
   .typ_sec_01{
     padding: 64px 124px 62px 0;
     .btn_read{
@@ -78,6 +77,7 @@
 .top_sec_wrap{
   display: flex;
   justify-content: space-around;
+  color: var(--fontColor);
   .top_img_wrap{
     position: relative;
     width: 50%;
@@ -89,6 +89,7 @@
 
 /* top section 공통 텍스트 */
 .typ_sec{
+  width: 50%;
   h2 {
     color: $prime_color;
     letter-spacing: 3px;
@@ -104,8 +105,6 @@
 
 /* typ_sec_01 */
 .typ_sec_01{
-    padding: 64px 80px 62px 0;
-    width: 50%;
   .top_sub_01 {
     margin-top: 16px;
   }
@@ -131,85 +130,94 @@
   }
 }
 
-
-
-
-/* tablet 지정 */
-@media only screen and (max-width: 768px) {
-  .layout_banner_wrap{
-    background-size: cover;
-    & > div{
-      left: 8%;
-      top: 50%;
-      width: 70%;
-      & > p{
-        margin-bottom: 12px;
-        &:nth-child(2){
-        line-height: 18px;
-        }
-      }
+/* typ_sec_03 */
+.typ_sec_03{
+  background-repeat: no-repeat;
+  .top_sub_01 {
+    margin-top: 16px;
+    & > span{
+      color: $prime_color;
     }
   }
-  /* page_blog */
-  .page_blog{
-    .typ_sec_01{
-      padding: 20px 0 0 0;
+  .top_sub_txt_02 {
+    padding: 15px 109px 0 114px;
+  }
+}
+
+
+/* page_home */
+.page_home{
+  .top_img_wrap{
+    position: relative;
+    &::after{
+      content: '';
+      display: block;
+      clear: both;
+    }
+    .bnt_video{
+      position: absolute;
+      left: 12%;
+      bottom: 40px;
+      width: 318px;
+      height: 112px;
+      padding-left: 68px;
+      border: 0;
+      background-image: url(../../assets/images/ico/ico_youtube.png);
+      background-repeat: no-repeat;
+      background-position: 10% center;
     }
   }
-  /* page_s_podcast */
-  .page_s_podcast{
-    .typ_sec_01{
-      padding: 20px 0 0 0;
+}
+.sec_fir{
+  .typ_sec_03{
+    background-image: url(../../assets/images/lines/bg_lines_8.png);
+    background-position: 44%;
+    .top_sub_01{
+      padding: 100px 116px 0 114px;
     }
   }
-
-
-
-  /* top_sec영역  */
-  .top_sec_wrap{
-    display: block;
-    .top_img_wrap{
-      width: 100%;
-    }
-  }
-
-  /* typ_sec_01 */
-  .typ_sec_01{
-    width: 100%;
-  }
-
-  /* top section 공통 텍스트 */
-  .typ_sec{
+}
+.sec_secon{
+  .typ_sec_03{
+    background-image: url(../../assets/images/lines/bg_lines_4.png);
+    background-position: top 12% right 12%;
     .top_sub_01 {
+      padding: 100px 173px 0 114px;
+    }
+  }
+}
+.sec_thir{
+  .top_img_wrap{
+    &::after{
+      content: '';
+      display: inline-block;
+      position: absolute;
+      left: -34px;
+      bottom: -21px;
+      width: 384px;
+      height: 124px;
+      background: $prime_color url(../../assets/images/contents/sound_wave.png) no-repeat center;
+    }
+  }
+  .typ_sec_03{
+    background-image: url(../../assets/images/lines/bg_lines_6.png);
+    background-position: bottom 30% right 5%;
+    .top_sub_01 {
+      padding: 90px 244px 0 0px;
+    }
+    .sub_txt{
+      padding: 30px 41px 0 0px;
+    }
+    .top_sub_txt_03{
+      font-weight: $sb;
       line-height: 28px;
     }
-    .top_sub_txt_02 {
-      margin-top: 10px;
-      line-height: 27px;
-    }
-    & > a{
-      margin-top: 22px;
-    }
   }
+}
 
-
-}/* tablet */
-
-/* mobile 지정 */
-@media only screen and (max-width: 425px) {
-  .layout_banner_wrap{
-    & > div{
-      left: 1%;
-      width: 100%;
-      & > p{
-        margin-bottom: 10px;
-      }
-    }
-  }
-
-}/* mobile */
-
-
+.reverse{
+  order: 2;
+}
 
 
 /* single blog, single_podcast 공통 container */
@@ -294,8 +302,170 @@
     }
   }
 }
+
+/* home ,about */
+.custom_swiper{
+  .custom_wrap{
+    overflow: visible;
+    & > li{
+      margin-bottom: 28px;
+      &::after{
+        content: '';
+        display: block;
+        width: 100%;
+        height: 12px;
+        margin-top: 12px;
+        background: $prime_color;
+      }
+    }
+    .my_review{
+      display: flex;
+      align-items: center;
+      margin-bottom: 16px;
+      & > p{
+        width: 116px;
+        height: 44px;
+        margin-left: 15px;
+        text-indent: 3px;
+        font-weight: $md;
+        color: var(--fontColor);
+        background: url(../../assets/images/ico/stars.png) no-repeat center bottom;
+      }
+    }
+    .review_con{
+      line-height: 24px;
+      color: var(--fontColor);
+      min-height: 65%;
+    }
+  }
+}
+
+/* page_about */
+.page_about{
+  .custom_wrap{
+    & > li{
+      &::after{
+        display: none;
+      }
+    }
+    .my_review{
+      display: block;
+      margin-bottom: 16px;
+      & > p{
+        width: 100%;
+        height: 100%;
+        margin-top: 32px;
+        margin-left: 0;
+        text-indent: 0;
+        font-weight: $sb;
+        color: var(--fontColor);
+        background: none;
+      }
+    }
+    .icon_desc{
+      line-height: 24px;
+    }
+  }
+}
+
 /* tablet 지정 */
 @media only screen and (max-width: 768px) {
+  .layout_banner_wrap{
+    & > div{
+      left: 8%;
+      top: 50%;
+      width: 70%;
+      & > p{
+        margin-bottom: 12px;
+        &:nth-child(2){
+        line-height: 18px;
+        }
+      }
+    }
+  }
+
+  /* top section 공통 텍스트 */
+  .typ_sec{
+    .top_sub_01 {
+      line-height: 28px;
+    }
+    .top_sub_txt_02 {
+      margin-top: 10px;
+      line-height: 27px;
+    }
+    & > a{
+      margin-top: 22px;
+    }
+  }
+
+  /* page_blog */
+  .page_blog{
+    .typ_sec_01{
+      padding: 20px 0 0 0;
+    }
+  }
+  /* page_s_podcast */
+  .page_s_podcast{
+    .typ_sec_01{
+      padding: 20px 0 0 0;
+    }
+  }
+
+  /* top_sec영역  */
+  .top_sec_wrap{
+    display: block;
+    .top_img_wrap{
+      width: 100%;
+    }
+  }
+
+  /* typ_sec_01 */
+  .typ_sec_01,
+  .typ_sec_03{
+    width: 100%;
+  }
+
+  /* typ_sec_03 */
+  .top_sec_wrap{
+    .typ_sec_03{
+      .top_sub_01,
+      .top_sub_txt_02,
+      .top_sub_txt_03{
+        padding: 0 20px !important;
+      }
+    }
+  }
+
+  /* page_home */
+  .sec_fir,
+  .sec_secon{
+    .typ_sec_03{
+      background: none;
+    }
+  }
+  .page_home{
+    .top_img_wrap{
+      .bnt_video{
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        max-height: 70px;
+      }
+    }
+  }
+  /* // page_home */
+
+  .sec_thir{
+    .top_img_wrap{
+      &::after{
+        left: 0;
+        bottom: 0;
+      }
+    }
+    .typ_sec_03{
+      background: none;
+    }
+  }
 
   //producer_post
   .producer_post {
@@ -316,7 +486,63 @@
     }
     }
   }
-}
+
+  /* home ,about */
+  .custom_swiper{
+    .custom_wrap{
+      display: block;
+      .custom_item{
+        width: 100%;
+        margin-bottom: 30px;
+      }
+      .my_review{
+        display: flex;
+        align-items: center;
+        margin-bottom: 16px;
+        & > p{
+          width: 116px;
+          height: 44px;
+          margin-left: 15px;
+          text-indent: 3px;
+        }
+      }
+      .review_con{
+        color: var(--fontColor);
+      }
+    }
+  }
+
+
+}/* tablet */
+
+/* mobile 지정 */
+@media only screen and (max-width: 425px) {
+  .layout_banner_wrap{
+    & > div{
+      left: 1%;
+      width: 100%;
+      & > p{
+        margin-bottom: 10px;
+      }
+    }
+  }
+
+  /* typ_sec_03 */
+  .typ_sec_03{
+    background-image: none;
+  }
+  .sec_thir{
+    .top_img_wrap{
+      &::after{
+        background-size: 60%;
+        width: 100%;
+        height: 64px;
+      }
+    }
+  }
+
+}/* mobile */
+
 
 /* container e ============================================== */
 /* ---------------------------------------------------------- */
