--- a/dev/css_dev/layout/_container.scss
+++ b/dev/css_dev/layout/_container.scss
@@ -89,7 +89,7 @@
 
 /* top section 공통 텍스트 */
 .typ_sec{
-  width: 50%;
+  //width: 50%;
   h2 {
     color: $prime_color;
     letter-spacing: 3px;
@@ -105,6 +105,7 @@
 
 /* typ_sec_01 */
 .typ_sec_01{
+  width: 50%;
   .top_sub_01 {
     margin-top: 16px;
   }
@@ -132,6 +133,7 @@
 
 /* typ_sec_03 */
 .typ_sec_03{
+  width: 50%;
   background-repeat: no-repeat;
   .top_sub_01 {
     margin-top: 16px;
@@ -156,7 +158,7 @@
     }
     .bnt_video{
       position: absolute;
-      left: 12%;
+      left: 60%;
       bottom: 40px;
       width: 318px;
       height: 112px;
