--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -465,8 +465,6 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 .top_sec_wrap .top_img_wrap > img { width: 100%; }
 
 /* top section 공통 텍스트 */
-.typ_sec { width: 50%; }
-
 .typ_sec h2 { color: #503AE7; letter-spacing: 3px; font-weight: 600; }
 
 .typ_sec .top_sub_01 { line-height: 38px; }
@@ -474,6 +472,8 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 .typ_sec .top_sub_txt_02 { line-height: 24px; }
 
 /* typ_sec_01 */
+.typ_sec_01 { width: 50%; }
+
 .typ_sec_01 .top_sub_01 { margin-top: 16px; }
 
 .typ_sec_01 .top_sub_txt_02 { margin-top: 15px; }
@@ -490,7 +490,7 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 .typ_sec_02 > a { margin-top: 32px; }
 
 /* typ_sec_03 */
-.typ_sec_03 { background-repeat: no-repeat; }
+.typ_sec_03 { width: 50%; background-repeat: no-repeat; }
 
 .typ_sec_03 .top_sub_01 { margin-top: 16px; }
 
@@ -503,7 +503,7 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 
 .page_home .top_img_wrap::after { content: ''; display: block; clear: both; }
 
-.page_home .top_img_wrap .bnt_video { position: absolute; left: 12%; bottom: 40px; width: 318px; height: 112px; padding-left: 68px; border: 0; background-image: url(../../assets/images/ico/ico_youtube.png); background-repeat: no-repeat; background-position: 10% center; }
+.page_home .top_img_wrap .bnt_video { position: absolute; left: 60%; bottom: 40px; width: 318px; height: 112px; padding-left: 68px; border: 0; background-image: url(../../assets/images/ico/ico_youtube.png); background-repeat: no-repeat; background-position: 10% center; }
 
 .sec_fir .typ_sec_03 { background-image: url(../../assets/images/lines/bg_lines_8.png); background-position: 44%; }
 
@@ -821,20 +821,18 @@ header .gnb .sub_menu ul.sns li a { vertical-align: sub; }
 
 .list_type .typ_list_wrap ul li:last-child { margin-right: 0; }
 
-/* list_type_01 */
-.list_typ_01 .typ_tit_wrap { position: relative; }
+/* list_type_01 _ tit */
+.typ_tit_wrap h2 { font-size: 32px; }
 
-.list_typ_01 .typ_tit_wrap h2 { font-size: 32px; }
+.typ_tit_wrap .type_01_sub { display: flex; justify-content: space-between; align-items: end; }
 
-.list_typ_01 .typ_tit_wrap p { line-height: 24px; margin-top: 16px; }
+.typ_tit_wrap .type_01_sub p { line-height: 24px; margin-top: 16px; }
 
-.list_typ_01 .typ_tit_wrap > .btn_1 { position: absolute; bottom: 0; right: 0; width: 195px; }
+.typ_tit_wrap .category_podcasts { margin-top: 16px; }
 
-.list_typ_01 .typ_tit_wrap .category_podcasts { display: none; }
+.typ_list_wrap { margin-top: 64px; }
 
-.list_typ_01 .typ_list_wrap { margin-top: 64px; }
-
-.list_typ_01 .typ_list_wrap ul li .typ_list_img { width: 100%; height: 256px; }
+.typ_list_wrap ul li .typ_list_img { width: 100%; height: 256px; }
 
 a.mute { position: absolute; top: 16px; right: 16px; color: #fff; }
 
@@ -847,19 +845,14 @@ a.mute i { background: url(../../assets/images/ico/ico_vector.png) no-repeat cen
 
 .list_typ_02 .typ_list_wrap ul li a .typ_sub_wrap h3 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
 
-/* podcast page */
-.page_podcast .typ_tit_wrap .hide { display: none; }
-
-.page_podcast .typ_tit_wrap .category_podcasts { margin-top: 32px; display: block; }
-
-/* // podcast page */
 @media only screen and (max-width: 768px) { /* list_type 공통 */
   .list_type .typ_list_wrap ul { display: block; }
   .list_type .typ_list_wrap ul li { width: 100%; margin: 0 0 30px 0; }
   .list_type .typ_list_wrap ul li .typ_sub_wrap { margin-top: 20px; }
   .list_type .typ_list_wrap ul li .typ_sub_wrap p, .list_type .typ_list_wrap ul li .typ_sub_wrap a.btn_listen { margin-top: 10px; }
-  /* list_typ_01 */
-  .list_typ_01 .typ_tit_wrap > a { position: inherit !important; margin-top: 20px; }
+  /* list_typ_01_ tit */
+  .typ_tit_wrap .type_01_sub { display: block; }
+  .typ_tit_wrap .type_01_sub > a { margin-top: 20px; }
   /* list_typ_02 */
   .list_typ_02 .typ_list_wrap ul li .typ_sub_wrap h3 { line-height: 20px; } }
 
