--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -826,7 +826,7 @@ header .gnb .sub_menu ul.sns li a { vertical-align: sub; }
 
 .typ_tit_wrap .type_01_sub { display: flex; justify-content: space-between; align-items: end; }
 
-.typ_tit_wrap .type_01_sub p { line-height: 24px; margin-top: 16px; }
+.typ_tit_wrap .type_01_sub p { width: 33%; line-height: 24px; margin-top: 16px; }
 
 .typ_tit_wrap .category_podcasts { margin-top: 16px; }
 
@@ -845,6 +845,8 @@ a.mute i { background: url(../../assets/images/ico/ico_vector.png) no-repeat cen
 
 .list_typ_02 .typ_list_wrap ul li a .typ_sub_wrap h3 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
 
+.page_home .typ_tit_wrap .type_01_sub p { width: 46%; }
+
 @media only screen and (max-width: 768px) { /* list_type 공통 */
   .list_type .typ_list_wrap ul { display: block; }
   .list_type .typ_list_wrap ul li { width: 100%; margin: 0 0 30px 0; }
@@ -852,9 +854,11 @@ a.mute i { background: url(../../assets/images/ico/ico_vector.png) no-repeat cen
   .list_type .typ_list_wrap ul li .typ_sub_wrap p, .list_type .typ_list_wrap ul li .typ_sub_wrap a.btn_listen { margin-top: 10px; }
   /* list_typ_01_ tit */
   .typ_tit_wrap .type_01_sub { display: block; }
+  .typ_tit_wrap .type_01_sub p { width: 100%; }
   .typ_tit_wrap .type_01_sub > a { margin-top: 20px; }
   /* list_typ_02 */
-  .list_typ_02 .typ_list_wrap ul li .typ_sub_wrap h3 { line-height: 20px; } }
+  .list_typ_02 .typ_list_wrap ul li .typ_sub_wrap h3 { line-height: 20px; }
+  .page_home .typ_tit_wrap .type_01_sub p { width: 100%; } }
 
 /* list e =================================================== */
 /* ---------------------------------------------------------- */
