--- a/assets/css/display_kim.css
+++ b/assets/css/display_kim.css
@@ -35,39 +35,17 @@
 
 .mq_logo_list marquee > a img { vertical-align: -webkit-baseline-middle; }
 
-.sec_wrap .sec { display: flex; align-items: center; }
+.page_home .swiper-sec { position: relative; }
 
-.sec_wrap .sec .sec_txt p { color: var(--fontColor); }
+.page_home .swiper-sec .swiper-button-next, .page_home .swiper-sec .swiper-button-prev { width: 48px; height: 48px; border-radius: 50%; background-color: #503AE7; }
 
-.sec_wrap .sec .sec_txt p.heading_2 { line-height: 38px; }
+.page_home .swiper-sec .swiper-button-prev { left: 85%; }
 
-.sec_wrap .sec .sec_txt p.heading_5 { margin-top: 22px; line-height: 28px; }
+.page_home .swiper-sec .swiper-button-prev::after { background: url(../../assets/images/ico/ico_prev.png) no-repeat center; }
 
-.sec_wrap .sec .sec_img { width: 40%; height: 512px; text-indent: -999px; font-size: 0; }
+.page_home .swiper-sec .swiper-button-next { right: 6%; }
 
-.sec_wrap .sec1 { justify-content: flex-end; background: url(../../assets/images/lines/bg_lines_8.png) no-repeat 22% center; }
-
-.sec_wrap .sec1 .sec_txt { width: 41%; }
-
-.sec_wrap .sec1 .sec_txt p { width: 55%; }
-
-.sec_wrap .sec1 .sec_txt p.heading_2 span { color: #503AE7; }
-
-.sec_wrap .sec1 .sec_img { background: url(../../assets/images/contents/main_con_1.png) no-repeat left center; background-size: 100%; }
-
-.sec_wrap .sec2 { justify-content: flex-start; background: url(../../assets/images/lines/bg_lines_4.png) no-repeat 70% 15%; position: relative; }
-
-.sec_wrap .sec2 .sec_txt { width: 47%; order: 2; padding-left: 183px; }
-
-.sec_wrap .sec2 .sec_txt p.heading_2 { width: 71%; }
-
-.sec_wrap .sec2 .sec_txt p.heading_2 span { color: #503AE7; }
-
-.sec_wrap .sec2 .sec_img { background: url(../../assets/images/contents/main_con_1.png) no-repeat left center; background-size: 100%; }
-
-.sec_wrap .sec2 .bnt_video { position: absolute; left: 25%; bottom: 40px; width: 318px; height: 112px; padding-left: 68px; border: 0; background: #503AE7 url(../../assets/images/ico/ico_youtube.png) no-repeat 10% center; color: #fff; }
-
-.sec_wrap .sec2 .bnt_video:hover { background-color: #3E2DB2; transition: .5s; }
+.page_home .swiper-sec .swiper-button-next::after { background: url(../../assets/images/ico/ico_next_01.png) no-repeat center; }
 
 /* tablet 지정 */
 @media only screen and (max-width: 768px) { .home_wrap .main_top { width: 100%; background-size: 50%; background-position: 95% center; }
@@ -83,16 +61,7 @@
   .email_send input[type=submit] { width: 25%; font-size: 14px; }
   /* banner */
   .mq_logo_list { width: 100%; margin-top: 80px; }
-  .mq_logo_list marquee > a { padding-right: 80px; }
-  .sec_wrap .sec { margin-top: 80px; }
-  .sec_wrap .sec .sec_txt p { width: 100%; }
-  .sec_wrap .sec .sec_img { width: 50%; height: 275px; }
-  .sec_wrap .sec1 { background-size: 43%; background-position: 7% center; }
-  .sec_wrap .sec1 .sec_txt { width: 50%; }
-  .sec_wrap .sec2 { background-size: 5%; background-position: 93% 7%; }
-  .sec_wrap .sec2 .sec_txt { width: 50%; padding-left: 20px; }
-  .sec_wrap .sec2 .sec_txt p.heading_2 { width: 100%; }
-  .sec_wrap .sec2 .bnt_video { left: 7%; bottom: 10%; width: 38%; height: 20%; } }
+  .mq_logo_list marquee > a { padding-right: 80px; } }
 
 /* // tablet 지정 */
 /* mobile 지정 */
@@ -103,14 +72,7 @@
   .email_send input[type="email"] { width: 70%; }
   .email_send input[type=submit] { width: 30%; }
   /* banner */
-  .mq_logo_list { margin-top: 40px; }
-  .sec_wrap .sec { display: block; margin-top: 50px; }
-  .sec_wrap .sec .sec_img { width: 100%; height: 275px; }
-  .sec_wrap .sec1 { background: none; }
-  .sec_wrap .sec1 .sec_txt { width: 100%; }
-  .sec_wrap .sec2 { background: none; }
-  .sec_wrap .sec2 .sec_txt { width: 100%; padding-left: 0px; }
-  .sec_wrap .sec2 .bnt_video { left: 0; bottom: 0; width: 100%; height: 13%; } }
+  .mq_logo_list { margin-top: 40px; } }
 
 /* // mobile 지정 */
 /* main e =================================================== */
