--- a/dev/css_dev/pages/_main.scss
+++ b/dev/css_dev/pages/_main.scss
@@ -75,88 +75,30 @@
   }
 }
 
-.sec_wrap{
-  .sec{
-    display: flex;
-    align-items: center;
-    .sec_txt{
-      p{
-        color: var(--fontColor);
-        &.heading_2{
-          line-height: 38px;
-        }
-        &.heading_5{
-          margin-top: 22px;
-          line-height: 28px;
-        }
-      }
-    }
-    .sec_img{
-      width: 40%;
-      height: 512px;
-      text-indent: -999px;
-      font-size: 0;
-    }
-  }
-  .sec1{
-    justify-content: flex-end;
-    background: url(../../assets/images/lines/bg_lines_8.png) no-repeat 22% center;
-    .sec_txt{
-      width: 41%;
-      p{
-        width: 55%;
-        &.heading_2{
-          span{
-            color: $prime_color;
-          }
-        }
-      }
-    }
-    .sec_img{
-      background: url(../../assets/images/contents/main_con_1.png) no-repeat left center;
-      background-size: 100%;
-    }
-  }
-  .sec2{
-    justify-content: flex-start;
-    background: url(../../assets/images/lines/bg_lines_4.png) no-repeat 70% 15%;
+.page_home{
+  .swiper-sec{
     position: relative;
-    .sec_txt{
-      width: 47%;
-      order: 2;
-      padding-left: 183px;
-      p{
-        &.heading_2{
-          width: 71%;
-          span{
-            color: $prime_color;
-          }
-        }
+    .swiper-button-next,
+    .swiper-button-prev{
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      background-color: $prime_color;
+    }
+    .swiper-button-prev{
+      left: 85%;
+      &::after{
+        background: url(../../assets/images/ico/ico_prev.png) no-repeat center;
       }
     }
-    .sec_img{
-      background: url(../../assets/images/contents/main_con_1.png) no-repeat left center;
-      background-size: 100%;
-    }
-    .bnt_video{
-      position: absolute;
-      left: 25%;
-      bottom: 40px;
-      width: 318px;
-      height: 112px;
-      padding-left: 68px;
-      border: 0;
-      background:#503AE7 url(../../assets/images/ico/ico_youtube.png) no-repeat 10% center;
-      color: #fff;
-      &:hover {
-        background-color: #3E2DB2;
-        transition: .5s;
+    .swiper-button-next{
+      right: 6%;
+      &::after{
+        background: url(../../assets/images/ico/ico_next_01.png) no-repeat center;
       }
     }
   }
 }
-
-
 
 
 /* tablet 지정 */
@@ -211,47 +153,6 @@
     }
   }
 
-  .sec_wrap{
-    .sec{
-      margin-top: 80px;
-      .sec_txt{
-        p{
-          width: 100%;
-        }
-      }
-      .sec_img{
-        width: 50%;
-        height: 275px;
-      }
-    }
-    .sec1{
-      background-size: 43%;
-      background-position: 7% center;
-      .sec_txt{
-        width: 50%;
-      }
-    }
-    .sec2{
-      background-size: 5%;
-      background-position: 93% 7%;
-      .sec_txt{
-        width: 50%;
-        padding-left: 20px;
-        p{
-          &.heading_2{
-            width: 100%;
-          }
-        }
-      }
-      .bnt_video{
-        left: 7%;
-        bottom: 10%;
-        width: 38%;
-        height: 20%;
-      }
-    }
-  }
-
 
 } /* // tablet 지정 */
 
@@ -282,37 +183,6 @@
   .mq_logo_list{
     margin-top: 40px;
   }
-
-  .sec_wrap{
-    .sec{
-      display: block;
-      margin-top: 50px;
-      .sec_img{
-        width: 100%;
-        height: 275px;
-      }
-    }
-    .sec1{
-      background: none;
-      .sec_txt{
-        width: 100%;
-      }
-    }
-    .sec2{
-      background: none;
-      .sec_txt{
-        width: 100%;
-        padding-left: 0px;
-      }
-      .bnt_video{
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 13%;
-      }
-    }
-  }
-
 
 } /* // mobile 지정 */
 
