--- a/dev/css_dev/base/_base.scss
+++ b/dev/css_dev/base/_base.scss
@@ -261,6 +261,7 @@ ul.socials_list {
   color: #fff;
   background-color: $prime_color;
   z-index: 1;
+  transform: translateY(30%);
   &::after{
     content: '';
     display: block;
