--- a/assets/css/display_soo.css
+++ b/assets/css/display_soo.css
@@ -16,9 +16,9 @@
 
 .page_host { color: var(--fontColor); }
 
-.page_host .mq_logo_list { width: 100%; }
+.page_host .mq_logo_list { width: 100%; margin: 78px 0 0 0; }
 
-.origins_wrap { background: url(../../assets/images/lines/bg_lines_9.png) no-repeat left/contain; padding: 107px 114px 0px 114px; }
+.origins_wrap { background: url(../../assets/images/lines/bg_lines_9.png) no-repeat left/contain; padding: 107px 114px 0px 114px; margin-top: 40px; }
 
 .origins_wrap .ori_con { display: flex; margin: 0 auto; max-width: 1024px; }
 
@@ -80,6 +80,7 @@
 @media only screen and (max-width: 425px) { .page_host .banner_top_01 .banner_top_img { height: 390px; background: url(../../assets/images/contents/main_host.png) no-repeat center/100%; }
   .page_host .banner_top_01 .banner_top_tit_wrap { position: inherit; left: inherit; }
   .page_host .banner_top_01 .banner_top_tit_wrap .typ_sec_02 { padding: 0 20px; }
+  .page_host .mq_logo_list { margin-top: 38px; }
   .podcasts_n_view_wrap { height: 280px; }
   .podcasts_n_view_wrap .pod_vi ul li { font-size: 14px; width: calc(( 100% - 15px) / 4); margin-right: 5px; }
   .podcasts_n_view_wrap .pod_vi ul li i { height: 50px; width: 50px; }
@@ -94,8 +95,6 @@
 /* ========================================================== */
 /* podcast s                                                  */
 /* ========================================================== */
-.page_podcast .list_typ_01 { margin-top: 128px; }
-
 .podcast_top .podcast_tit_wrap { background: url(../../assets/images/contents/podcasts_banner_1.png) no-repeat right bottom; width: 100%; height: 564px; position: relative; }
 
 .podcast_top .podcast_tit_wrap .podcast_tit { position: absolute; top: 48px; left: 6.25%; color: #F4F2FF; background-color: #503AE7; border-left: 16px solid #1AD993; padding: 7.5% 8.5% 7.5% 5%; width: 60%; }
@@ -110,9 +109,16 @@
 
 .podcast_top .podcast_tit_wrap .podcast_tit a i { background-color: #1AD993; }
 
+.page_podcast .all_podcast .category_podcasts { margin-top: 32px; }
+
+.page_podcast .all_podcast .category_podcasts a { margin-right: 16px; }
+
 @media only screen and (max-width: 768px) { .podcast_top .podcast_tit_wrap .podcast_tit { padding: 10% 8% 10%; width: 80%; } }
 
-@media only screen and (max-width: 425px) { .podcast_top .podcast_tit_wrap .podcast_tit { padding: 6% 4%; width: 86%; left: 30px; } }
+@media only screen and (max-width: 425px) { .podcast_top .podcast_tit_wrap .podcast_tit { padding: 6% 4%; width: 86%; left: 30px; }
+  .page_podcast .all_podcast .category_podcasts { margin-top: 32px; }
+  .page_podcast .all_podcast .category_podcasts a { margin-right: 16px; }
+  .page_podcast .all_podcast .category_podcasts a:nth-child(n+2) { margin-top: 10px; } }
 
 /* podcast e ================================================ */
 /* ========================================================== */
@@ -233,6 +239,26 @@
 @media only screen and (max-width: 360px) { .our_sponsors .our_s_tit_wrap .our_s_con ul li > img { width: 70%; } }
 
 /* about e ================================================== */
+/* ========================================================== */
+/* blog s                                                     */
+/* ========================================================== */
+.page_blog .top_sec_wrap { margin-top: 64px; }
+
+.page_blog .list_typ_01 .typ_list_wrap ul { column-gap: 16px; row-gap: 0px; }
+
+.page_blog .list_typ_01 .typ_list_wrap ul li:nth-child(n+4) { margin-top: 64px; }
+
+.page_blog .list_typ_01 .typ_list_wrap ul li .img_wrap { overflow: hidden; }
+
+.page_blog .list_typ_01 .typ_list_wrap ul li .img_wrap img { transition: all 0.4s linear; object-fit: cover; }
+
+.page_blog .list_typ_01 .typ_list_wrap ul li .img_wrap:hover > img { transform: scale(1.1); }
+
+@media only screen and (max-width: 768px) { .page_blog .list_typ_01 .typ_list_wrap ul li { margin-bottom: 30px; }
+  .page_blog .list_typ_01 .typ_list_wrap ul li:nth-child(n+4) { margin-top: inherit; }
+  .page_blog .list_typ_01 .typ_list_wrap ul li img { object-fit: cover; } }
+
+/* blog e =================================================== */
 /* ========================================================== */
 /* single blog s                                              */
 /* ========================================================== */
