--- a/dev/css_dev/layout/_footer.scss
+++ b/dev/css_dev/layout/_footer.scss
@@ -77,7 +77,12 @@
 //mdq pc
 @media only screen and (max-width: 768px) {
 
-  .footer_sponsors {
+  .footer_top {
+    padding: 0;
+  }
+
+  .footer_sponsors,
+  .inbox_wrap {
     padding: 42px 42px !important;
     transform: inherit;
     .logoipsum {
@@ -106,6 +111,7 @@
   }
 
 }
+
 
 //mdq tab
 @media only screen and (max-width: 425px) {
