--- a/dev/css_dev/pages/_main.scss
+++ b/dev/css_dev/pages/_main.scss
@@ -83,19 +83,17 @@
       width: 48px;
       height: 48px;
       border-radius: 50%;
-      background-color: $prime_color;
+      &::after{
+        content: '';
+      }
     }
     .swiper-button-prev{
       left: 85%;
-      &::after{
-        background: url(../../assets/images/ico/ico_prev.png) no-repeat center;
-      }
+      background: $prime_color url(../../assets/images/ico/ico_prev.png) no-repeat center;
     }
     .swiper-button-next{
       right: 6%;
-      &::after{
-        background: url(../../assets/images/ico/ico_next_01.png) no-repeat center;
-      }
+      background: $prime_color url(../../assets/images/ico/ico_next_01.png) no-repeat center;
     }
   }
 }
