--- a/assets/css/display_soo.css
+++ b/assets/css/display_soo.css
@@ -42,19 +42,19 @@
 
 .podcasts_n_view_wrap .pod_vi ul li:nth-child(1) { bottom: 0; left: 0; animation: updown 5s linear 0s infinite alternate; }
 
-.podcasts_n_view_wrap .pod_vi ul li:nth-child(1) i { background: url(../../../assets/images/ico/ico_podcasts_g.png) no-repeat center/cover; }
+.podcasts_n_view_wrap .pod_vi ul li:nth-child(1) i { background: url(../../assets/images/ico/ico_podcasts_g.png) no-repeat center/cover; }
 
 .podcasts_n_view_wrap .pod_vi ul li:nth-child(2) { top: 0; left: 25.25%; animation: downup 5s linear 0s infinite alternate; }
 
-.podcasts_n_view_wrap .pod_vi ul li:nth-child(2) i { width: 138px; background: url(../../../assets/images/ico/ico_views_g.png) no-repeat center/cover; }
+.podcasts_n_view_wrap .pod_vi ul li:nth-child(2) i { width: 138px; background: url(../../assets/images/ico/ico_views_g.png) no-repeat center/cover; }
 
 .podcasts_n_view_wrap .pod_vi ul li:nth-child(3) { bottom: 0; left: 50.55%; animation: updown 5s linear 0s infinite alternate; }
 
-.podcasts_n_view_wrap .pod_vi ul li:nth-child(3) i { width: 109px; background: url(../../../assets/images/ico/ico_subscribers_g.png) no-repeat center/cover; }
+.podcasts_n_view_wrap .pod_vi ul li:nth-child(3) i { width: 109px; background: url(../../assets/images/ico/ico_subscribers_g.png) no-repeat center/cover; }
 
 .podcasts_n_view_wrap .pod_vi ul li:nth-child(4) { top: 0; margin-right: 0; left: 76%; animation: downup 5s linear 0s infinite alternate; }
 
-.podcasts_n_view_wrap .pod_vi ul li:nth-child(4) i { background: url(../../../assets/images/ico/ico_views_2.png) no-repeat center/cover; }
+.podcasts_n_view_wrap .pod_vi ul li:nth-child(4) i { background: url(../../assets/images/ico/ico_views_2.png) no-repeat center/cover; }
 
 .podcasts_n_view_wrap .pod_vi ul li span { display: block; margin: 96px 0 16px 0; }
 
@@ -124,7 +124,9 @@
 /* ========================================================== */
 /* single podcast s                                           */
 /* ========================================================== */
-.page_single_podcast .producer_post { display: flex; justify-content: space-between; margin: 0 auto; max-width: 1024px; }
+.single_podcast_top { margin-top: 64px; }
+
+.page_single_podcast .producer_post { display: flex; justify-content: space-between; margin: 128px auto; max-width: 1024px; }
 
 .page_single_podcast .producer_post .producer_post_wrap { width: 62%; }
 
@@ -133,6 +135,8 @@
 .page_single_podcast .producer_post .listen_on .podcasts_list li { margin-bottom: 32px; }
 
 .page_single_podcast .producer_post .listen_on .podcasts_list li:last-child { margin-bottom: 0; }
+
+.page_single_podcast .typ_tit_wrap { color: var(--fontColor); }
 
 @media only screen and (max-width: 768px) { .page_single_podcast .producer_post { flex-wrap: wrap; }
   .page_single_podcast .producer_post .producer_post_wrap { width: 100%; }
@@ -162,11 +166,11 @@
 
 .page_about .banner_top_01 .banner_top_tit_wrap .banner_top_tit .typ_sec p.top_sub_01 { line-height: 52.8px; }
 
-.our_team { margin-top: 86px; background: url(../../../assets/images/lines/bg_lines_10.png) no-repeat left 33%; color: var(--fontColor); }
+.our_team { margin-top: 86px; background: url(../../assets/images/lines/bg_lines_10.png) no-repeat left 33%; color: var(--fontColor); }
 
 .our_team .our_t_tit_wrap { margin: 0 auto; max-width: 1024px; }
 
-.our_team .our_t_tit_wrap .our_t_img_wrap { margin-top: 48px; background: url(../../../assets/images/contents/about_banner.png) no-repeat bottom; height: 320px; width: 100%; }
+.our_team .our_t_tit_wrap .our_t_img_wrap { margin-top: 48px; background: url(../../assets/images/contents/about_banner.png) no-repeat bottom; height: 320px; width: 100%; }
 
 .our_team .our_t_tit_wrap .our_t_txt { margin-top: 48px; display: flex; line-height: 24px; }
 
@@ -211,6 +215,8 @@
 .our_sponsors .our_s_tit_wrap .our_s_con ul li:last-child a.contact { display: block; margin-top: 64px; line-height: 24px; }
 
 .our_sponsors .our_s_tit_wrap .our_s_con ul li:last-child span.line { width: 39px; height: 4px; line-height: 24px; background-color: #1AD993; display: block; margin-top: 8px; }
+
+.page_about .typ_tit_wrap { color: var(--fontColor); }
 
 @media only screen and (max-width: 768px) { .page_about .banner_top_01 .banner_top_tit_wrap { padding: 55px 20px; width: 45%; left: 0; bottom: 0; }
   .page_about .banner_top_01 .banner_top_tit_wrap .banner_top_tit .typ_sec { padding: 0; }
@@ -293,7 +299,7 @@
 /* ========================================================== */
 /* contact s                                                  */
 /* ========================================================== */
-.contact_us { color: var(--fontColor); margin-top: 64px; height: calc( 100vh - 136px); background: url(../../../assets/images/contents/bg_contact.png) no-repeat right bottom; }
+.contact_us { color: var(--fontColor); margin-top: 64px; height: calc( 100vh - 136px); background: url(../../assets/images/contents/bg_contact.png) no-repeat right bottom; }
 
 .contact_us .contact_us_wrap { display: flex; }
 
