--- a/assets/css/display_soo.css
+++ b/assets/css/display_soo.css
@@ -126,6 +126,10 @@
 /* ========================================================== */
 .single_podcast_top { margin-top: 64px; }
 
+.single_podcast_top .top_sec_wrap .typ_sec a { line-height: 24px; }
+
+.single_podcast_top .top_sec_wrap .typ_sec a span.time { color: #1AD993; margin-left: 32px; font-weight: 600; }
+
 .page_single_podcast .producer_post { display: flex; justify-content: space-between; margin: 128px auto; max-width: 1024px; }
 
 .page_single_podcast .producer_post .producer_post_wrap { width: 62%; }
