--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -381,7 +381,7 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 
 .inbox_wrap .email_send input[type=submit] { background-color: #1AD993; }
 
-.inbox_wrap .email_send::before, .inbox_wrap .email_send::after { content: ''; display: block; width: 114px; height: 120px; position: absolute; }
+.inbox_wrap .email_send::before, .inbox_wrap .email_send::after { content: ''; display: block; width: 114px; height: 120px; position: absolute; z-index: -1; }
 
 .inbox_wrap .email_send::before { background: url(../../assets/images/ico/mic_2.png) no-repeat; left: 10%; top: 19%; }
 
@@ -570,19 +570,6 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 
 .banner_top_01 .banner_top_tit_wrap .banner_top_tit .typ_sec a { line-height: 24px; }
 
-/* home ,about */
-.custom_swiper .custom_wrap { overflow: visible; }
-
-.custom_swiper .custom_wrap > li { margin-bottom: 28px; }
-
-.custom_swiper .custom_wrap > li::after { content: ''; display: block; width: 100%; height: 12px; margin-top: 12px; background: #503AE7; }
-
-.custom_swiper .custom_wrap .my_review { display: flex; align-items: center; margin-bottom: 16px; }
-
-.custom_swiper .custom_wrap .my_review > p { width: 116px; height: 44px; margin-left: 15px; text-indent: 3px; font-weight: 500; color: var(--fontColor); background: url(../../assets/images/ico/stars.png) no-repeat center bottom; }
-
-.custom_swiper .custom_wrap .review_con { line-height: 24px; color: var(--fontColor); min-height: 65%; }
-
 /* page_about */
 .page_about .custom_wrap > li::after { display: none; }
 
@@ -621,13 +608,7 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
   .producer_post .producer_post_wrap { width: 100%; }
   .producer_post .producer_post_wrap .pro_po_profile { margin-top: 36px; }
   .producer_post .producer_post_wrap .pro_po_profile .pro_po_profile_wrap { padding: 17px 0 22px 25px; flex-wrap: wrap; }
-  .producer_post .producer_post_wrap .pro_po_profile .pro_po_profile_wrap .pro_info_con { margin-top: 20px; margin-left: 0; }
-  /* home ,about */
-  .custom_swiper .custom_wrap { display: block; }
-  .custom_swiper .custom_wrap .custom_item { width: 100%; margin-bottom: 30px; }
-  .custom_swiper .custom_wrap .my_review { display: flex; align-items: center; margin-bottom: 16px; }
-  .custom_swiper .custom_wrap .my_review > p { width: 116px; height: 44px; margin-left: 15px; text-indent: 3px; }
-  .custom_swiper .custom_wrap .review_con { color: var(--fontColor); } }
+  .producer_post .producer_post_wrap .pro_po_profile .pro_po_profile_wrap .pro_info_con { margin-top: 20px; margin-left: 0; } }
 
 /* tablet */
 /* mobile 지정 */
@@ -689,7 +670,7 @@ header .gnb .sub_menu ul.menu li { float: left; margin-right: 48px; }
 
 header .gnb .sub_menu ul.menu li:last-child { margin-right: 32px; }
 
-header .gnb .sub_menu ul.menu li a { display: block; height: 100%; }
+header .gnb .sub_menu ul.menu li a { display: block; height: 100%; font-weight: 700; }
 
 header .gnb .sub_menu ul.sns { float: left; }
 
@@ -823,6 +804,8 @@ header .gnb .sub_menu ul.sns li a { vertical-align: sub; }
 .list_type .typ_list_wrap ul li:last-child { margin-right: 0; }
 
 /* list_type_01 _ tit */
+.typ_tit_wrap { color: var(--fontColor); }
+
 .typ_tit_wrap h2 { font-size: 32px; }
 
 .typ_tit_wrap .type_01_sub { display: flex; justify-content: space-between; align-items: end; }
