--- a/assets/css/display_kim.css
+++ b/assets/css/display_kim.css
@@ -6,7 +6,7 @@
 /* ========================================================== */
 /* ---------------------------------------------------------- */
 /* main s =================================================== */
-.home_wrap .main_top { width: 1024px; margin: 0 auto; background: url(../../assets/images/contents/bg_audio_track.png) no-repeat center right; }
+.home_wrap .main_top { padding: 0 125px; background: url(../../assets/images/contents/bg_audio_track.png) no-repeat center right 20%; }
 
 .home_wrap .main_top .main_tit { width: 480px; margin-top: 92px; }
 
@@ -35,18 +35,34 @@
 
 .mq_logo_list marquee > a img { vertical-align: -webkit-baseline-middle; }
 
-.page_home .swiper-sec { position: relative; }
+.page_home .swiper { height: 100%; margin: 128px 80px 0; color: var(--fontColor); }
 
-.page_home .swiper-sec .swiper-button-next, .page_home .swiper-sec .swiper-button-prev { width: 48px; height: 48px; border-radius: 50%; }
+.page_home .swiper-sec { position: relative; margin-bottom: 64px; }
+
+.page_home .swiper-sec .swiper-button-next, .page_home .swiper-sec .swiper-button-prev { width: 48px; height: 48px; border-radius: 50%; margin-top: 0; }
 
 .page_home .swiper-sec .swiper-button-next::after, .page_home .swiper-sec .swiper-button-prev::after { content: ''; }
 
-.page_home .swiper-sec .swiper-button-prev { left: 85%; background: #503AE7 url(../../assets/images/ico/ico_prev.png) no-repeat center; }
+.page_home .swiper-sec .swiper-button-prev { left: 88%; background: #503AE7 url(../../assets/images/ico/ico_prev.png) no-repeat center; }
 
-.page_home .swiper-sec .swiper-button-next { right: 6%; background: #503AE7 url(../../assets/images/ico/ico_next_01.png) no-repeat center; }
+.page_home .swiper-sec .swiper-button-next { right: 0%; background: #503AE7 url(../../assets/images/ico/ico_next_01.png) no-repeat center; }
+
+.custom_swiper .custom_wrap { overflow: visible; }
+
+.custom_swiper .custom_wrap > li { margin-bottom: 28px; }
+
+.custom_swiper .custom_wrap > li::after { content: ''; display: block; width: 100%; height: 12px; margin-top: 12px; background: #503AE7; }
+
+.custom_swiper .custom_wrap .my_review { display: flex; align-items: center; margin-bottom: 16px; }
+
+.custom_swiper .custom_wrap .my_review > img { width: 80px; height: 80px; border-radius: 50%; }
+
+.custom_swiper .custom_wrap .my_review > p { width: 116px; height: 44px; margin-left: 15px; text-indent: 3px; font-weight: 500; background: url(../../assets/images/ico/stars.png) no-repeat center bottom; }
+
+.custom_swiper .custom_wrap .review_con { height: auto; min-height: 192px; line-height: 24px; }
 
 /* tablet 지정 */
-@media only screen and (max-width: 768px) { .home_wrap .main_top { width: 100%; background-size: 50%; background-position: 95% center; }
+@media only screen and (max-width: 768px) { .home_wrap .main_top { padding: 0 20px; background-size: 37%; background-position: 85% center; }
   .home_wrap .main_top .main_tit { width: 314px; margin-top: 92px; }
   .home_wrap .main_top .main_tit p { margin-top: 20px; }
   .home_wrap .main_top .main_tit p:first-child { font-size: 28px; line-height: 35px; }
@@ -59,7 +75,12 @@
   .email_send input[type=submit] { width: 25%; font-size: 14px; }
   /* banner */
   .mq_logo_list { width: 100%; margin-top: 80px; }
-  .mq_logo_list marquee > a { padding-right: 80px; } }
+  .mq_logo_list marquee > a { padding-right: 80px; }
+  .custom_swiper .custom_wrap { display: flex; }
+  .page_home .swiper { margin: 30px 0px 0; padding: 0 16px; }
+  .page_home .swiper-sec { margin-bottom: 64px; }
+  .page_home .swiper-sec .swiper_btn_wrap { position: absolute; position: absolute; right: 66px; bottom: -10px; }
+  .page_home .swiper-sec .swiper-button-next, .page_home .swiper-sec .swiper-button-prev { width: 32px; height: 32px; background-size: 50%; } }
 
 /* // tablet 지정 */
 /* mobile 지정 */
