--- a/dev/css_dev/base/_base.scss
+++ b/dev/css_dev/base/_base.scss
@@ -286,6 +286,7 @@ ul.socials_list {
       width: 114px;
       height: 120px;
       position: absolute;
+      z-index: -1;
     }
     &::before{
       background: url(../../assets/images/ico/mic_2.png) no-repeat;
