--- a/dev/css_dev/pages/_main.scss
+++ b/dev/css_dev/pages/_main.scss
@@ -9,9 +9,8 @@
 
 .home_wrap{
   .main_top{
-    width: 1024px;
-    margin: 0 auto;
-    background: url(../../assets/images/contents/bg_audio_track.png) no-repeat center right;
+    padding: 0 125px;
+    background: url(../../assets/images/contents/bg_audio_track.png) no-repeat center right 20%;
     .main_tit{
       width: 480px;
       margin-top: 92px;
@@ -76,24 +75,71 @@
 }
 
 .page_home{
+  .swiper {
+    height: 100%;
+    margin: 128px 80px 0;
+    color: var(--fontColor);
+  }
   .swiper-sec{
     position: relative;
+    margin-bottom: 64px;
     .swiper-button-next,
     .swiper-button-prev{
       width: 48px;
       height: 48px;
       border-radius: 50%;
+      margin-top: 0;
       &::after{
         content: '';
       }
     }
     .swiper-button-prev{
-      left: 85%;
+      left: 88%;
       background: $prime_color url(../../assets/images/ico/ico_prev.png) no-repeat center;
     }
     .swiper-button-next{
-      right: 6%;
+      right: 0%;
       background: $prime_color url(../../assets/images/ico/ico_next_01.png) no-repeat center;
+    }
+  }
+}
+
+.custom_swiper{
+  .custom_wrap{
+    overflow: visible;
+    & > li{
+      margin-bottom: 28px;
+      &::after{
+        content: '';
+        display: block;
+        width: 100%;
+        height: 12px;
+        margin-top: 12px;
+        background: $prime_color;
+      }
+    }
+    .my_review{
+      display: flex;
+      align-items: center;
+      margin-bottom: 16px;
+      & > img{
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+      }
+      & > p{
+        width: 116px;
+        height: 44px;
+        margin-left: 15px;
+        text-indent: 3px;
+        font-weight: $md;
+        background: url(../../assets/images/ico/stars.png) no-repeat center bottom;
+      }
+    }
+    .review_con{
+      height: auto;
+      min-height: 192px;
+      line-height: 24px;
     }
   }
 }
@@ -103,9 +149,9 @@
 @media only screen and (max-width: 768px) {
   .home_wrap{
     .main_top{
-      width: 100%;
-      background-size: 50%;
-      background-position: 95% center;
+      padding: 0 20px;
+      background-size: 37%;
+      background-position: 85% center;
       .main_tit{
         width: 314px;
         margin-top: 92px;
@@ -151,6 +197,32 @@
     }
   }
 
+  .custom_swiper{
+    .custom_wrap{
+      display: flex;
+    }
+  }
+  .page_home{
+    .swiper {
+      margin: 30px 0px 0;
+      padding: 0 16px;
+    }
+    .swiper-sec{
+      margin-bottom: 64px;
+      .swiper_btn_wrap{
+        position: absolute;
+        position: absolute;
+        right: 66px;
+        bottom: -10px;
+      }
+      .swiper-button-next,
+      .swiper-button-prev{
+        width: 32px;
+        height: 32px;
+        background-size: 50%;
+      }
+    }
+  }
 
 } /* // tablet 지정 */
 
