--- a/dev/css_dev/layout/_container.scss
+++ b/dev/css_dev/layout/_container.scss
@@ -39,8 +39,8 @@
   }
 }
 
-/* page_padcast */
-.page_padcast{
+/* page_podcast */
+.page_podcast{
   .layout_banner_wrap{
     background: url(../../assets/images/contents/podcast_banner_2.png) no-repeat center;
     background-size: cover;
